chore(railway): add railway.json and production config for template compatibility

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -1,6 +1,6 @@
 app:
   # Should be the same as backend.baseUrl when using the `app-backend` plugin.
-  baseUrl: http://localhost:7007
+  baseUrl: __BACKSTAGE_BASE_URL__
 
 backend:
   # Note that the baseUrl should be the URL that the browser and other clients
@@ -8,19 +8,21 @@ backend:
   # reachable not just from within the backend host, but from all of your
   # callers. When its value is "http://localhost:7007", it's strictly private
   # and can't be reached by others.
-  baseUrl: http://localhost:7007
+  baseUrl: __BACKSTAGE_BASE_URL__
   # The listener can also be expressed as a single <host>:<port> string. In this case we bind to
   # all interfaces, the most permissive setting. The right value depends on your specific deployment.
-  listen: ':7007'
+  listen:
+    port: ${PORT}
+    host: 0.0.0.0
 
   # config options: https://node-postgres.com/apis/client
   database:
     client: pg
     connection:
-      host: ${POSTGRES_HOST}
-      port: ${POSTGRES_PORT}
-      user: ${POSTGRES_USER}
-      password: ${POSTGRES_PASSWORD}
+      host: ${PGHOST}
+      port: ${PGPORT}
+      user: ${PGUSER}
+      password: ${PGPASSWORD}
       # https://node-postgres.com/features/ssl
       # you can set the sslmode configuration option via the `PGSSLMODE` environment variable
       # see https://www.postgresql.org/docs/current/libpq-ssl.html Table 33.1. SSL Mode Descriptions (e.g. require)
