--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -32,7 +32,8 @@ backend:
 
 auth:
   providers:
-    guest: {}
+    guest: 
+      dangerouslyAllowOutsideDevelopment: true
 
 catalog:
   # Overrides the default list locations from app-config.yaml as these contain example data.
