--- a/app-config.yaml
+++ b/app-config.yaml
@@ -42,6 +42,10 @@ integrations:
     # - host: ghe.example.net
     #   apiBaseUrl: https://ghe.example.net/api/v3
     #   token: ${GHE_TOKEN}
+  gitlab:
+    - host: gitlab.com
+      token: ${GITLAB_TOKEN}
+      apiBaseUrl: https://gitlab.com/api/v4
 
 proxy:
   ### Example for how to add a proxy endpoint for the frontend.
