change config for proxys

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -45,11 +45,11 @@ integrations:
 proxy:
   endpoints:
     '/gitlab-raw':
-      target: 'https://gitlab.com'
+      target: 'https://gitlab.com/api/v4'
       headers:
         Private-Token: '${GITLAB_TOKEN}'
       pathRewrite:
-        '^/gitlab-raw': ''
+        '^/api/proxy/gitlab-raw': ''
       changeOrigin: true
 
 auth:
