--- a/app-config.yaml
+++ b/app-config.yaml
@@ -56,11 +56,11 @@ proxy:
   #     changeOrigin: true
   endpoints:
     '/gitlab-raw':
-      target: 'https://gitlab.com'
+      target: 'https://gitlab.com/api/v4'
       headers:
         Private-Token: '${GITLAB_TOKEN}'
       pathRewrite:
-        '^/gitlab-raw': ''
+        '^/api/proxy/gitlab-raw': ''
       changeOrigin: true
 
 # Reference documentation http://backstage.io/docs/features/techdocs/configuration
