--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -38,6 +38,8 @@
     "@backstage/plugin-techdocs": "^1.16.1",
     "@backstage/plugin-techdocs-module-addons-contrib": "^1.1.31",
     "@backstage/plugin-techdocs-react": "^1.3.6",
+    "backstage-plugin-techdocs-addon-mermaid": "^0.3.0",
+    "@immobiliarelabs/backstage-plugin-gitlab": "^6.0.0",
     "@backstage/plugin-user-settings": "^0.8.30",
     "@backstage/theme": "^0.7.1",
     "@backstage/ui": "^0.10.0",
