--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   },
   "resolutions": {
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "cytoscape": "3.28.1"
   },
   "prettier": "@backstage/cli/config/prettier",
   "lint-staged": {
