--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -35,6 +35,7 @@
     "@backstage/plugin-proxy-backend": "^0.6.9",
     "@backstage/plugin-scaffolder-backend": "^3.1.0",
     "@backstage/plugin-scaffolder-backend-module-github": "^0.9.3",
+    "@backstage/plugin-scaffolder-backend-module-gitlab": "^0.8.0",
     "@backstage/plugin-scaffolder-backend-module-notifications": "^0.1.17",
     "@backstage/plugin-search-backend": "^2.0.9",
     "@backstage/plugin-search-backend-module-catalog": "^0.3.11",
