feat: add components to software template

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -94,7 +94,7 @@ catalog:
     - type: url
       target: https://gitlab.com/supermercados-poc/supermercados-schemas/-/blob/main/catalog-info.yaml
       rules:
-        - allow: [Component, API]
+        - allow: [Component, API, Location]
 
     # Generated libraries
     - type: url
